Simplify ByteBuddyHolder blacklist